--- a/src/main/resources/templates/customers/customer-list.html
+++ b/src/main/resources/templates/customers/customer-list.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div class="container">
+    <br>
     <h2>Customers</h2>
 
     <div th:if="${success}" th:text="${success}" class="alert alert-success"></div>
@@ -23,6 +24,11 @@
        class="btn btn-secondary btn-sm mb-3">
         Back
     </a>
+
+    <form th:action="@{/customer/list}" method="GET">
+        <input th:value="${searchTerm}" placeholder="Enter search term..." size="50" type="text" name="searchTerm">
+        <button class="btn btn-primary btn-sm mb-1" type="submit">Search</button>
+    </form>
 
     <table class="table table-bordered table-striped">
         <thead class="table-dark">
@@ -63,6 +69,10 @@
     <hr>
 
     <a th:href="@{/}">Home page</a>
+    <br>
+    <form action="#" th:action="@{/logout}" method="POST">
+        <input class="nav-link" type="submit" value="Logout"/>
+    </form>
 </div>
 </body>
 </html>
