--- a/src/main/resources/templates/orders/order-list.html
+++ b/src/main/resources/templates/orders/order-list.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div class="container">
+    <br>
     <h2>Orders</h2>
 
     <div th:if="${success}" th:text="${success}" class="alert alert-success"></div>
@@ -51,13 +52,13 @@
             <td th:text="${tempOrder.date}"></td>
             <td th:if="${param.customerId == null}"
                 th:text="${#numbers.formatInteger(tempOrder.customer.number,6) + ' - ' +  tempOrder.customer.lastName + ' ' + tempOrder.customer.firstName}"></td>
-            <td th:text="${#numbers.formatDecimal(#aggregates.sum(tempOrder.orderDetails.![quantity * value]), 1, 'COMMA', 2, 'POINT')} ?: '0.00'"></td>
+            <td th:text="${#numbers.formatDecimal(#aggregates.sum(tempOrder.orderDetails.![quantity * unitPrice]), 1, 'COMMA', 2, 'POINT')} ?: '0.00'"></td>
             <td>
                 <a th:href="@{/order/details(orderId=${tempOrder.id})}"
                    class="btn btn-info btn-sm">
                     Details
                 </a>
-                <a sec:authorize="hasRole('MANAGER')" th:href="@{/order/delete(orderId=${tempOrder.id})}"
+                <a sec:authorize="hasRole('MANAGER')" th:href="@{/order/delete(orderId=${tempOrder.id}, customerId=${param.customerId})}"
                    class="btn btn-danger btn-sm"
                    onclick="if (!(confirm('Are you sure you want to delete this order?'))) return false">
                     Delete
@@ -69,6 +70,9 @@
     <hr>
 
     <a th:href="@{/}">Home page</a>
+    <form action="#" th:action="@{/logout}" method="POST">
+        <input class="nav-link" type="submit" value="Logout"/>
+    </form>
 </div>
 </body>
 </html>
